--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Resources\Scripts\HandsBase.cs" />
     <Compile Include="Assets\Art\Prefabs\Snowball Spawner\SnowballSpawner.cs" />
     <Compile Include="Assets\Resources\Scripts\Hazard.cs" />
+    <Compile Include="Assets\Resources\Scripts\GoToLevelTwo.cs" />
     <Compile Include="Assets\Art\Prefabs\Staffs\IceStaff.cs" />
     <Compile Include="Assets\Resources\Scripts\Player\PlayerHands.cs" />
     <Compile Include="Assets\Resources\Scripts\HealthBase.cs" />
@@ -102,7 +103,6 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\Art\Imports\Rainy VFX\Documentation\README.txt" />
-    <None Include="Assets\Art\Imports\WaterWorks\Shaders\Volumetric_Water.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Art\Imports\WaterWorks\Shaders\WaterSSR.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\SDFFunctions.hlsl" />
